Works in prod an optimised !