@@ -7,12 +7,19 @@ import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.concurrent.ConcurrentHashMap;
 
 public class MethodLookup {
     private final Map<String, List<String>> map;
+    private static final Map<Class<?>, Map<String, List<Method>>> methodCache = new ConcurrentHashMap<>();
 
     public MethodLookup(Map<String, List<String>> map) {
         this.map = map != null ? map : Collections.emptyMap();
+    }
+
+    private static List<Method> findAndCache(Class<?> cls, String cacheKey, List<String> namesToSearch) {
+        Map<String, List<Method>> classCache = methodCache.computeIfAbsent(cls, k -> new ConcurrentHashMap<>());
+        return classCache.computeIfAbsent(cacheKey, k -> ReflectionUtils.findMethods(cls, namesToSearch, false));
     }
 
     public boolean hasMapped(String key) {
@@ -24,12 +31,15 @@ public class MethodLookup {
     }
 
     public List<Method> findMethods(Class<?> cls, String key) {
-        List<String> names = map.getOrDefault(key, List.of());
-        return ReflectionUtils.findMethods(cls, names, false);
+        List<String> runtimeNames = map.getOrDefault(key, Collections.emptyList());
+        if (runtimeNames.isEmpty()) {
+            return Collections.emptyList();
+        }
+        return findAndCache(cls, key, runtimeNames);
     }
 
     public static List<Method> findDirect(Class<?> cls, String key) {
-        return ReflectionUtils.findMethods(cls, List.of(key), false);
+        return findAndCache(cls, key, List.of(key));
     }
 
     public static boolean hasDirect(Class<?> cls, String key) {
